# world-cup-test

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MODULE.bazel  README.md  WORKSPACE  eslint.sh  index.html  package.json  platform_mappings  requirements.txt  targets.mind
apps/desktop/: .gitignore  BUILD  README.md  RELEASING.md  app-build.sh  app-package.sh  application-state.ts  builder.config.ts  constants.ts  errors.ts  json-response.ts  local-preferences.ts  local-project-db.ts  local-server.ts  package-lock.json  package.json  project-helpers.ts  query-params.ts  requests.ts  stream-file-response.ts  tsconfig.json  windows-sign.js
apps/g8/: BUILD  _g8  deploy.js  g8-commands.cc  g8-commands.h  g8-config.bzl  g8-helpers.cc  g8-helpers.h  g8-impl.cc  g8-impl.h  g8-old.cc  g8-old.h  g8-plumbing.cc  g8-plumbing.h  g8.cc  git-service-factory.cc  git-service-factory.h  git-service-interface.cc  git-service-interface.h  github-service.cc  github-service.h  gitlab-service.cc  gitlab-service.h
apps/image-target-cli/: .eslintrc.json  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
bzl/: BUILD  exec-transition.bzl  fetch-conan-packages.bzl
bzl/android/: BUILD  MainActivity.java  android-ndk.bzl  android-node-binary.bzl  android-sdk-packages.bzl  android-sdk.bzl  android-version.bzl  android.bzl  extract-lib-from-apk.sh  generate-plugin-aar.sh  manifest.tpl
bzl/apple/: BUILD  Info.plist.framework.tpl  build-apple-framework.sh  dsymutil.bzl  lipo.bzl  objc.bzl  rosetta-platform-configure.bzl
bzl/asan/: BUILD
bzl/assemble/: nasm_assemble.bzl
bzl/capnproto/: BUILD  capnpc-js-plugin.sh  capnpc-ts-plugin.sh  capnproto.bzl
bzl/cmake/: cmake-cc-wrapper.bzl
bzl/conditions/: BUILD  test_conditions.sh  utils.bzl
bzl/cpu-microarch/: BUILD  cpu-microarch-allowed_target.bzl
bzl/crosstool/: BUILD  amazonlinux-cc-toolchain.bzl  amazonlinux-tool-wrapper.bzl  android-cc-toolchain.bzl  android-tool-wrapper.bzl  ar-android-wrapper.sh  ar-linux-wrapper.sh  ar-windows-wrapper.bat  ar-windows-wrapper.sh  clang-amazonlinux-wrapper.sh  clang-android-wrapper.sh  clang-v2-linux-wrapper.sh  clang-windows-wrapper.bat  clang-windows-wrapper.sh  clang-xcwrapper.sh  dsymutil-xcwrapper.sh.tpl  emar-wrapper.sh  emcc-wrapper.sh  empty-rust-toolchain.bzl  emscripten.bzl  emscripten.config.tpl  env-vars.bzl  execution-platform-configure.BUILD.tpl  execution-platform-configure.bzl  libtool-xcwrapper.sh  local-tool.bzl  ml-windows-wrapper.sh  node-toolchain.bzl  rust.bzl  rustc-wrapper.sh  rustc.bzl  simd.bzl  strip-android-wrapper.sh.tpl  strip-linux-wrapper.sh.tpl  strip-windows-wrapper.sh.tpl  strip-xcwrapper.sh.tpl  toolchain-compiler-flags.bzl  toolchains.bzl  v1-linux-cc-toolchain.bzl  v1-linux-tool-wrapper.bzl  (+9 more)
bzl/examples/: BUILD  HelloJava.java  bio_hello.c  example-methods.cc  example-methods.h  export-methods.cc  export-methods.h  hello-c.c  hello-cc-test.cc  hello-exceptions.cc  hello-js-test.js  hello-js.js  hello-py.py  hello-ts-test.ts  hello.cc  node-addon-test.js  node-api-example-methods.cc  rust-ffi.cc  rust-ffi.h  rust-ffi.rs
bzl/examples/python/: BUILD.bazel  test_python_version.py
bzl/googlemaven/: BUILD
bzl/gpu/: BUILD  cuda-triplet.bzl  cuda.bzl  metal-build.sh  metal.bzl  metallib-build.sh  verify_cuda_env.sh
bzl/gradle/: gradle.bzl
bzl/httpfileserver/: http-file-server.bzl
bzl/inliner/: BUILD  example-cc-binary-rules2.cc  example-cc-binary.cc  rules.h  rules2.h
bzl/inlinerjs/: BUILD  README.md  attribute-sort-order.ts  inlinerjs.ts  sort-string-list-test.ts  sort-string-list.ts
bzl/ios/: BUILD
bzl/js/: BUILD  bootstrap.bzl  chai-js-bin.ts  chai-js.d.ts  chai-js.js  fileloader.js  js-filegroup.bzl  js-stringloader.bzl  js.bzl  link-js-emrun.py  no-experimental-warnings.js  proto.bzl  reset-target.bzl  select.bzl  ts-declarations.bzl  webpack-build.ts
bzl/linter/: BUILD  eslint-diff.ts  eslint-mr.ts
bzl/linux/: BUILD
bzl/llvm/: BUILD  clang-tidy-config.yaml  clang-tools.bzl  compile-commands.bzl  iwyu.bzl  iwyu.sh  llvm.bzl  merge-compile-commands.js  toolchains.bzl
bzl/macro/: BUILD  strip.bzl
bzl/mono/: BUILD  toolchains.bzl
bzl/node/: BUILD  node-addon.bzl  node-package.bzl  node-source-transition.bzl  node-tools.bzl  npm.bzl  prune.bzl
bzl/npmpackage/: BUILD  exhaustive-typecheck-test.ts  generate-typecheck.ts  typecheck.bzl
bzl/osx/: BUILD
bzl/python/: BUILD  README.md  a4lidartag_requirements.txt  benchmark_quest_requirements.txt  extra_requirements.txt  nae_publish_requirements.txt  pyproject.toml  requirements.txt  update_requirements_txt  whismur_requirements.txt
bzl/redist/: BUILD  linux_binary_redist.bzl  linux_binary_redist.sh
bzl/redist/flatc/: BUILD.bazel
bzl/redist/protoc/: BUILD.bazel
bzl/runfiles/: materialize-node-runfiles.bzl  materialize-runfiles.bzl
bzl/rust/: rust.bzl
bzl/services/: terrain-service.bzl
bzl/shader/: BUILD  shader.bzl  shadercc.sh
bzl/stamp/: BUILD  release-build-id.h  stamp-build.sh
bzl/tar/: untar.bzl
bzl/unity/: BUILD  (+12 more)
c8/: BUILD  Quaternion.java  c8-log-proto.cc  c8-log-proto.h  c8-log.cc  c8-log.h  color-maps.cc  color-maps.h  color.cc  color.h  exceptions-test.cc  exceptions.cc  exceptions.h  filters-test.cc  filters.cc  filters.h  float-vector-test.cc  float-vector.cc  float-vector.h  half-test.cc  half.cc  half.h  hash-test.cc  hash.cc  hash.h  hmatrix-benchmark-test.cc  hmatrix-test.cc  hmatrix.cc  hmatrix.h  hpoint-test.cc  hpoint.cc  hpoint.h  hvector-test.cc  hvector.cc  hvector.h  json-conversions-test.cc  json-conversions.cc  json-conversions.h  map-test.cc  map.h  (+39 more)
examples/: README.md
reality/: BUILD  reality-ci.yml
rules/: acronym-capitalization.js  commonjs.js  export-request-handler.js  express-deprecated-send.js  hardcoded-copy.js  i18n-nesting.js  implicit-any.js  index.js  inline-comment-spacing.js  multiline-ternary.js  prefer-await.js  reality-shared-imports.js  type-only-imports.js  typedef-separators.js  ui-component-styling.js  underscore-argument.js  untyped-array.js  zod-tuple.js
scripts/: apply-npm-rule.sh  lint.sh
(+3053 files in other folders)
