[tool.poetry]
name = "niantic_python_deps"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
packages = [ ]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
# TODO - try changing this back to ^2.5.0 later
# We have this set specifically to 2.5.0 because for some reason when installing on gitlab it can't find 2.6+
Appium-Python-Client = "^1.2.0"
Jinja2 = "^2.11.3"
Markdown = "^3.4.1"
Pillow = "^9.0.1"
PyGithub = "^1.55"
PyJWT = "^2.3.0"
PyYAML = "^6.0"
ansicolors = "^1.1.8"
appdirs = "^1.4.4"
asks = "^2.4.12"
autoflake = "^1.4"
autopep8 = "^1.6.0"
binaryornot = "^0.4.4"
black = "^22.3.0"
boto3 = "^1.21.17"
certifi = "^2021.10.8"
click = "^8.0.4"
curio = "^1.5"
flake8 = "^5.0.4"
google = "^3.0.0"
google-auth = "^2.5.0"
google-auth-oauthlib = "^0.5.0"
graphlib-backport = "^1.0.3"
humanize = "^4.0.0"
isort = "^5.10.1"
linkcheckmd = "^1.4.0"
loguru = "^0.6.0"
matplotlib = "^3.5.1"
mypy = "^0.961"
numpy = "^1.22.3"
pandas = "^1.4.1"
prettyprinter = "^0.18.0"
protobuf = "^3.19.4"
pycodestyle = "^2.9.0"
pycparser = "^2.21"
pydantic = "^1.8.2"
pylint = "^2.12.2"
pyparsing = "^3.0.7"
pytest = "^7.1.2"
python-dateutil = "^2.8.2"
python-gitlab = "^3.15.0"
requests = "^2.27.1"
requests-toolbelt = "^1.0.0"
s3transfer = "^0.5.2"
seaborn = "^0.11.2"
sympy = "^1.10"
trio = "^0.19.0"
trio-typing = "^0.5.1"
trio-websocket = "^0.9.2"
typeguard = "^2.12.1"
validate-email = "^1.3"
virtualenv = "^20.13.3"
GitPython = "^3.1.29"
google-api-python-client = "^2.66.0"
oauth2client = "^4.1.3"
gspread = "^5.7.1"
python-kasa = "^0.5.3"
google-cloud = "^0.34.0"
google-cloud-bigquery = "^3.11.4"
google-cloud-storage = "^2.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
